Fix deploy for Vercel

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
             <a href="{% url 'about' %}" class="btn btn-success btn-lg mt-3">เรียนรู้เพิ่มเติมเกี่ยวกับเรา</a>
         </div>
         <div class="col-md-6 text-center">
-            <img src="{% statics 'assets/img/ฟุตบอล.jpeg' %}" alt="ฟุตบอล" class="img-fluid rounded shadow" style="max-height: 320px;">
+            <img src="{% static 'assets/img/ฟุตบอล.jpeg' %}" alt="ฟุตบอล" class="img-fluid rounded shadow" style="max-height: 320px;">
             <div class="mt-2 fw-bold">
                 สร้างโดย: นายแทนไทย พันธูชาติ<br>
                 รหัส 6712732132<br>
