--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <body class="sb-nav-fixed" style="background: #a5d6a7; color: #222;">
         <nav class="sb-topnav navbar navbar-expand" style="background: #19c722; color: #f4efef;">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="index.html">ฟุตบอล</a>
+            <a class="navbar-brand ps-3" href="home.html">ฟุตบอล</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
